added radius in list and details API
