# docs/swagger.json
@@ -76,7 +76,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/github.com_taalhach_aroundhome-challennge_internal_server_apihandlers.partnerDetailsResponse"
+                            "$ref": "#/definitions/internal_server_apihandlers.partnerDetailsResponse"
                         }
                     },
                     "404": {
@@ -113,6 +113,9 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "radius_in_meters": {
+                    "type": "integer"
                 },
                 "rating": {
                     "type": "number"
